--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "bot_token": "Input your bot token",
-    "admin_ids": [Input your user id]
+    "bot_token": "7532262757:AAGiLmASO7JmVXjTQAVNVJMigE5rqFJp4xc",
+    "admin_ids": ["6983385429"]
 }
